--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
     "swiper": "^11.1.14"
   },
